# cpp-boost-examples

./: .gitignore  CMakeLists.txt  CMakePresets.json  README.md  vcpkg-configuration.json  vcpkg.json
.github/workflows/: build.yml
boost-synch-state-machine/: CMakeLists.txt  main.cpp
boost-synch-state-machine/inc/: controller.h  fsm_impl.h
boost-synch-state-machine/src/: controller.cpp
boost-timers/: CMakeLists.txt  CMakePresets.json  main.cpp
boost-timers/inc/: timer.h  timer_manager.h
boost-timers/src/: timer.cpp  timer_manager.cpp
boost-unix-socket/boost-socket-client/: CMakeLists.txt  CMakePresets.json  main.cpp
boost-unix-socket/boost-socket-server/: CMakeLists.txt  CMakePresets.json  main.cpp
boost-unix-socket/boost-socket-server/inc/: conn_handler.h  my_server.h  session.h
boost-unix-socket/boost-socket-server/proto/: gps_position.proto
boost-unix-socket/boost-socket-server/src/: conn_handler.cpp  my_server.cpp  session.cpp
setup-scripts/: install-boost-189.sh  install-boost.sh  install-prerequisites.sh  install-protobuf.sh  install-vcpkg.sh
